# nekoplot

./: .gitignore  LICENSE  README.md  color.py  control.py  event.py  ex_graph.py  ex_item.py  item.py  layout.py  panel.py  pyproject.toml  setup.py  status.py  utility.py
.github/workflows/: release.yml
src/nekoplot/: color.py  const.py  control.py  dialog.py  event.py  graph.py  item.py  layer.py  layout.py  panel.py  plot.py  rect.py  scale.py  status.py  utility.py
src/nekoplot/extra/: ex_graph.py  ex_item.py
