[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekoplot"
dynamic = ["version"]
description = "plotting with wxPython and skia"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Kei Watanabe", email = "jasri.kei.watanabe@gmail.com" },
]
dependencies = [
    "wxPython>=4.2",
    "skia-python>=138.0",
    "opencv-python>=4.5",
    "numpy>=1.21",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]
